data/derived/fa15/progs/unify/prog0912.ml.out
Characters 276-279:
  res + carry
  ^^^
Error: This expression has type int list
       but an expression was expected of type int
